--- a/400123019/Stage1_scrapping_and_labeling.ipynb
+++ b/400123019/Stage1_scrapping_and_labeling.ipynb
@@ -204,7 +204,7 @@
    "hash": "6416f418eb6028d940f0cee898673b7afd04fa0d5c74c6b280ddcb674075d44a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('captcha')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
